--- a/src/styles/SlideDrawer.css
+++ b/src/styles/SlideDrawer.css
@@ -25,6 +25,7 @@ body {
 	transition: transform 0.3s ease-out;
 	/* text-align: center; */
 }
+
 .side-drawer.open {
 	transform: translateX(0);
 }
@@ -86,14 +87,16 @@ body {
 
 .wrap-text {
 	height: 40px;
-	padding: 10px;
+	line-height: 40px;
 	max-width: 300px;
 	margin: 0 auto;
+	overflow: hidden;
+	overflow-x: scroll;
 }
 
 #wrap-form {
 	padding: 10px;
-	height: calc(100% - 80px);
+	height: calc(100% - 50px);
 	max-width: 300px;
 	margin: 0 auto;
 }
@@ -104,15 +107,21 @@ body {
 	height: 22px;
 }
 
-#file-list {
+#file-ul {
 	overflow-y: scroll;
-	height: calc(100% - 214px);
-	margin: 10px;
+	overflow-x: scroll;
+	height: calc(100% - 220px);
+	/* padding-inline-start: 0; */
+	border: 1px solid #eeeeee;
+	padding: 5px 10px;
+	text-align: left;
 }
 
-#file-ul {
-	padding-inline-start: 10px;
+.file-li {
+	overflow-x: scroll;
+	white-space:nowrap;
 }
+
 #fb-btn {
 	color: white;
 	background-color: rgb(176, 68, 64);
@@ -127,7 +136,7 @@ body {
 	background-color: white;
 	border: none;
 	width: 50px;
-	height: 50px;
+	height: 100%;
 	margin : auto;
 }
 
